@@ -3,12 +3,16 @@ package com.example.demo.extra.fairyTale.dto;
 import com.example.demo.domain.entity.FairyTale;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ParticipantConverter {
 
-    public static List<String> toFairyNames(FairyTale fairyTale) {
+    public static List<ParticipantResponse> toFairyNames(FairyTale fairyTale) {
         return fairyTale.getParticipations().stream()
-                .map(p -> p.getFairy().getName())
-                .toList();
+                .map(p -> new ParticipantResponse(
+                        p.getFairy().getName(),
+                        p.getFairy().getFirstImage()
+                ))
+                .collect(Collectors.toList());
     }
 }
